# greetings-chatgpt

./: Cargo.toml
migrations/: 20230321035837_accounts.sql  20230331135002_gpt-version.sql
src/: bot_state.rs  main.rs
